--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,31 @@
-# This is a basic workflow to help you get started with Actions
-
-name: build-resume
-
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+name: 'Texlive Build'
+on: 
   push:
-    branches: [ master ]
-    paths:
-      - 'markdown/**'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
-  build-resume:
+  build:
     runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      
-      - name: Test directory contents
-        run: 'ls -al'
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Build resume
-        uses: ./actions
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v2.2.3
-        with:
-          # Artifact name
-          name: Resume PDF # optional, default is artifact
-          # A file, directory or wildcard pattern that describes what to upload
-          path: output/*.pdf
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+          
+    - name: Build Docker Image
+      run: |
+        docker buildx create --use
+        docker buildx build --push --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache -t resume-make -f ./.docker/resume.dockerfile .
 
+    - name: Run Docker Container
+      run: docker run --name resume-make -v ${PWD}:/home/app/resume:z resume-make /entrypoint.sh
