--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,8 @@
 name: 'Texlive Build'
-on: 
-  push:
-    branches:
-      - master
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
-          
-    - name: Build Docker Image
-      run: |
-        docker buildx create --use
-        docker buildx build --push --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache -t resume-make -f ./.docker/resume.dockerfile .
-
-    - name: Run Docker Container
-      run: docker run --name resume-make -v ${PWD}:/home/app/resume:z resume-make /entrypoint.sh
+description: 'Build a document using texlive'
+runs:
+  using: 'docker'
+  image: 'docker://ghcr.io/mszep/pandoc_resume:master'
+  args:
+    - '-v'
+    - '${{ github.workspace }}:/home/app/resume:z'
