--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
 name: 'Texlive Build'
 description: 'Build a document using texlive'
+on:
+  push:
+    branches:
+      - master
+
 runs:
   using: 'docker'
   image: 'docker://ghcr.io/mszep/pandoc_resume:master'
