--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,27 @@
-name: 'Texlive Build'
-description: 'Build a document using texlive'
-on:
-  push:
-    branches:
-      - master
 
-runs:
-  using: 'docker'
-  image: 'docker://ghcr.io/mszep/pandoc_resume:master'
-  args:
-    - '-v'
-    - '${{ github.workspace }}:/home/app/resume:z'
+jobs:
+  build-resume:
+    runs-on: ubuntu-latest
+#   services:
+#     buildhost:
+#       image: ghcr.io/mszep/pandoc_resume/resume_builder:latest
+#       credentials:
+#         username: ${{ github.actor }}
+#         password: ${{ secrets.GITHUB_TOKEN }}
+#       volumes:
+#         - ${{ github.workspace }}:${{ github.workspace }}
+#       ports:
+#         - 32001:22
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+        run: 'ls -al'
+
+      - name: Build resume
+        uses: docker://ghcr.io/mszep/pandoc_resume/resume_builder:latest
+        with:
+          args: "-v ${{ github.workspace }}:/home/app/resume"
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.3
