--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -10,8 +10,15 @@ on:
   # Triggers the workflow on push events but only for the master branch
   push:
     branches: [ master ]
+    paths:
+      - '.docker/resume.dockerfile'
+      - 'actions/entrypoint.sh'
+      - 'docker-compose.yml'
     paths-ignore:
       - 'markdown/**'
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
