--- a/.github/workflows/buildresume.yml
+++ b/.github/workflows/buildresume.yml
@@ -23,4 +23,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: output-artifact
-        path: ./output/*
+        path: ./output/resume.pdf
